import { AdministrativeArea } from "./AdministrativeArea";


export class Audience extends Intangible {
  audienceType: string;
  geographicArea: AdministrativeArea;


}
