export enum DigitalDocumentPermissionType {
  CommentPermission,
  ReadPermission,
  WritePermission,
}
