import { string,AboutPage,string,CreativeWork } from "./string,AboutPage,string,CreativeWork";
import { EducationalOccupationalCredential } from "./EducationalOccupationalCredential";
import { Person } from "./Person";
import { Review } from "./Review";
import { string,string,Thing } from "./string,string,Thing";
import { Organization,Person } from "./Organization,Person";
import { date } from "./date";
import { Grant } from "./Grant";
import { DefinedTerm,string,string } from "./DefinedTerm,string,string";
import { ContactPoint } from "./ContactPoint";
import { Organization } from "./Organization";
import { QuantitativeValue } from "./QuantitativeValue";
import { Offer } from "./Offer";
import { string,CreativeWork } from "./string,CreativeWork";
import { AggregateRating } from "./AggregateRating";
import { InteractionCounter } from "./InteractionCounter";
import { PostalAddress,string,Place,VirtualLocation } from "./PostalAddress,string,Place,VirtualLocation";
import { string,PostalAddress } from "./string,PostalAddress";
import { ProgramMembership,Organization } from "./ProgramMembership,Organization";
import { string,Article } from "./string,Article";
import { CreativeWork,string } from "./CreativeWork,string";
import { NonprofitType } from "./NonprofitType";
import { Organization,Brand } from "./Organization,Brand";
import { string,ImageObject } from "./string,ImageObject";
import { GeoShape,AdministrativeArea,Place } from "./GeoShape,AdministrativeArea,Place";
import { MerchantReturnPolicy } from "./MerchantReturnPolicy";
import { Place } from "./Place";
import { AdministrativeArea,GeoShape,string,Place } from "./AdministrativeArea,GeoShape,string,Place";
import { Language,string } from "./Language,string";
import { Demand } from "./Demand";
import { Product,OwnershipInfo } from "./Product,OwnershipInfo";
import { OfferCatalog } from "./OfferCatalog";
import { Person,Organization } from "./Person,Organization";
import { Event } from "./Event";


export class Organization extends Thing {
  ownershipFundingInfo: string,AboutPage,string,CreativeWork;
  hasCredential: EducationalOccupationalCredential;
  founders: Person;
  telephone: string;
  review: Review;
  knowsAbout: string,string,Thing;
  award: string;
  member: Organization,Person;
  employee: Person;
  dissolutionDate: date;
  funding: Grant;
  vatID: string;
  globalLocationNumber: string;
  keywords: DefinedTerm,string,string;
  contactPoints: ContactPoint;
  subOrganization: Organization;
  awards: string;
  numberOfEmployees: QuantitativeValue;
  funder: Organization,Person;
  makesOffer: Offer;
  legalName: string;
  correctionsPolicy: string,CreativeWork;
  aggregateRating: AggregateRating;
  interactionStatistic: InteractionCounter;
  location: PostalAddress,string,Place,VirtualLocation;
  address: string,PostalAddress;
  memberOf: ProgramMembership,Organization;
  publishingPrinciples: string,CreativeWork;
  diversityStaffingReport: string,Article;
  diversityPolicy: CreativeWork,string;
  email: string;
  employees: Person;
  nonprofitStatus: NonprofitType;
  slogan: string;
  ethicsPolicy: string,CreativeWork;
  brand: Organization,Brand;
  sponsor: Organization,Person;
  logo: string,ImageObject;
  actionableFeedbackPolicy: string,CreativeWork;
  naics: string;
  contactPoint: ContactPoint;
  serviceArea: GeoShape,AdministrativeArea,Place;
  isicV4: string;
  hasMerchantReturnPolicy: MerchantReturnPolicy;
  hasPOS: Place;
  founder: Person;
  unnamedSourcesPolicy: CreativeWork,string;
  foundingLocation: Place;
  duns: string;
  parentOrganization: Organization;
  alumni: Person;
  leiCode: string;
  areaServed: AdministrativeArea,GeoShape,string,Place;
  foundingDate: date;
  knowsLanguage: Language,string;
  reviews: Review;
  seeks: Demand;
  taxID: string;
  owns: Product,OwnershipInfo;
  hasOfferCatalog: OfferCatalog;
  members: Person,Organization;
  events: Event;
  iso6523Code: string;
  department: Organization;
  faxNumber: string;
  event: Event;


}
