classDiagram
  DigitalDocumentPermission -- Person
  DigitalDocumentPermission -- Audience
  DigitalDocumentPermission -- ContactPoint
  DigitalDocumentPermission -- Organization
  DigitalDocumentPermission -- DigitalDocumentPermissionType


class DigitalDocumentPermission {

  Person grantee
  Audience grantee
  ContactPoint grantee
  Organization grantee
  DigitalDocumentPermissionType permissionType

 }
